--- a/resources/gregtech/lang/en_us.lang
+++ b/resources/gregtech/lang/en_us.lang
@@ -98,7 +98,7 @@ material.metallic_hydrogen=Metallic Hydrogen
 material.tara_c_o_alloy=Tara-C-O-Alloy
 material.trinaquadalloy=Trinaquadallloy
 material.nylon610=Nylon-6,10
-
+material.di_n_propyl_ether=Di-n-propyl Ether
 
 gtadditions.machine.convert_forge.uxv.4.name=Forge Energy Converter (UXV)
 gtadditions.machine.convert_forge.uxv.16.name=Forge Energy Converter (UXV)
