--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -2205,4 +2205,4 @@ fluid.n_propyl_chloride=n-Propyl Chloride
 fluid.propene_emulsion=Propene Emulsion
 fluid.propyl_base_liqour=Propyl Base Liqour
 fluid.npropanol_base=n-Propanol Base
-
+item.contenttweaker.fire_mask.name=Fire Mask
