--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -986,7 +986,7 @@ multiblocktweaker.machine.coker.name=Coker
 multiblocktweaker.machine.pressurized_sterile_tank.name=Pressurized Sterile tank 
 multiblocktweaker.machine.combustion_generator.name=Combustion Generator
 recipemap.vacuum_furnace.name=Vacuum Smelting
-multiblocktweaker.multiblock.vacuum_furnace.description=The Vacuum Furnace is a furnace, being able to produce up to 1800k heat, it can smelt basic materials like copper alloy and certain plastics. It's required pre-EBF. Does not require power
+multiblocktweaker.multiblock.vacuum_furnace.description=The Vacuum Furnace is a furnace, being able to produce up to 1800k heat, it can smelt basic materials like copper alloy and certain plastics. It's required pre-EBF. Requires ULV power to run
 recipemap.water_tank.name=Water Collecting
 multiblocktweaker.multiblock.water_tank.description=The Water Tank Collects Water from the surrounding areas and outputs them in the hatch, it's meant to be used after aquiring steel
 recipemap.coker.name=Coking
