--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -2220,9 +2220,65 @@ item.contenttweaker.sifted_tantalite.name=Sifted Tantalite
 item.contenttweaker.sifted_andradite.name=Sifted Andradite
 item.contenttweaker.iron_concentrate.name=Iron Concentrate
 tile.contenttweaker.carved_pumpkin.name=Carved Pumpkin
-
-
-
-
-
+recipemap.blender.name=Blending
+tile.contenttweaker.blade_assembly.name=Blade Assembly Block
+item.contenttweaker.etched_phenolic_board.name=Etched Phenolic Board
+item.contenttweaker.engraved_phenolic_board.name=Engraved Phenolic Board
+item.contenttweaker.floated_tantalite.name=Floated Tantalite
+devtech.machine.vacuum_ejection_chamber.hv.name=Advanced Vacuum Ejection Chamber II
+metaitem.manganese_nitride.name=Manganese Nitride Dust
+metaitem.antimony_pentafluoride.name=Antimony Pentafluoride Dust 
+metaitem.silver_fluoride.name=Silver Fluoride Dust 
+metaitem.nickel_borate.name=Nickel Borate Dust 
+metaitem.magnesium_silicate.name=Magnesium Silicate Dust 
+metaitem.cobalt_manganese_oxide.name=Cobalt Manganse Oxide Dust 
+fluid.niobium_oxide_solution=Niobium Oxide Solution
+fluid.tantalum_oxide_solution=Tantalum Oxide Solution
+fluid.arsenic_vapor=Arsenic Vapor
+fluid.chromic_acid=Chromic Acid
+fluid.4-nitrophenol=4-Nitrophenol
+fluid.pbi_preparation_mixture=PBI Preparation Mixture
+fluid.pbi_preparation_mixture_precurser=PBI Preparation Mixture Precursor
+fluid.n-methylpyrrolidone=n-Methylpyrrolidone
+fluid.2-pyrrolidone=2-Pyrrolidone
+fluid.benzimidazole=Benzimidazole
+fluid.fluorinated_isophthalic_acid=Fluorinated Isophthalic Acid
+fluid.fluorinated_benzimidazole_mixture=Fluorinated Benzimidazole Mixture
+fluid.trifluorotoluene=Trifluorotoluene
+fluid.fluorinated_diaminodiphenyl_ether=Fluorinated Diaminodiphenyl Ether
+fluid.4-4_dinitrofluorodiphenyl_ether=4,4-Dinitrofluorodiphenyl Ether
+fluid.tetranitrofluorophenol=Tetranitrofluorophenol
+fluid.trinitrofluorophenol=Trinitrofluorophenol
+fluid.4-nitrofluorophenol=4-Nitrofluorophenol
+fluid.fluorinated_nitrophenol_residue=Fluorinated Nitrophenol Residue
+fluid.dinitrofluorophenol=Dinitrofluorophenol
+fluid.fluorinated_benzimidazole=Fluorinated Benzimidazole
+fluid.tantalite_slurry=Tantalite Slurry
+fluid.radon_rich_air=Radon Rich Air
+fluid.chilled_radon_rich_air=Chilled Radon Rich Air
+fluid.radon_containing_noble_gasses=Radon Containing Noble Gasses
+fluid.diluted_iron_concentrate=Diluted Iron Concentrate
+fluid.diluted_leach_residue=Diluted Leach Residue
+fluid.platinum_residue_solution=Platinum Residue Solution
+fluid.purified_olefin=Purified Olefin
+fluid.1_hexene=1-Hexene
+fluid.tetradecanol=Tetradecanol
+fluid.hydrogenated_olefin=Hydrogenated Olefin
+fluid.succinimidyl_acetate_solution=Succinimidyl Acetate Solution
+fluid.olefin_drilling_mud=Olefin Drilling Mud
+fluid.used_olefin_drilling_mud=Used Olefin Drilling Mud
+fluid.purified_1_decene=Purified 1-Decene
+fluid.purified_1_dodecene=Purified 1-Dodecene
+fluid.1_decene=1-Decene
+fluid.1_dodecene=1-Dodecene
+fluid.olefin_mixture=Olefin Mixture
+metaitem.nickel_boride.name=Nickel Boride Dust
+metaitem.niobium_oxide.name=Niobium Oxide Dust
+multiblocktweaker.machine.fluidized_bed_reactor.name=Fluidized Bed Reactor
+devtech.machine.fluid_compressor.ev.name=Advanced Fluid Compressor III
+devtech.machine.fluid_compressor.iv.name=Elite Fluid Compressor
+devtech.machine.fluid_compressor.luv.name=Elite Fluid Compressor II
+devtech.machine.fluid_compressor.zpm.name=Elite Fluid Compressor III
+devtech.machine.fluid_compressor.uv.name=Ultimate Fluid Compressor
+fluid.high_pressure_water=High Pressure Water
 
