--- a/resources/gregtech/lang/en_us.lang
+++ b/resources/gregtech/lang/en_us.lang
@@ -110,3 +110,4 @@ material.hematite=Hematite
 
 gtadditions.machine.convert_forge.uxv.4.name=Forge Energy Converter (UXV)
 gtadditions.machine.convert_forge.uxv.16.name=Forge Energy Converter (UXV)
+gregtech.machine.armor_table.name=Armor Table
