gas collector block textures

--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -2222,6 +2222,9 @@ item.contenttweaker.iron_concentrate.name=Iron Concentrate
 tile.contenttweaker.carved_pumpkin.name=Carved Pumpkin
 tile.contenttweaker.ore_factory_casing.name=Ore Factory Casing
 tile.contenttweaker.core_processing_casing.name=Core Processing Casing
+tile.contenttweaker.pressurized_atmospheric_casing=Pressurized Atmospheric Casing
+tile.contenttweaker.pressurized_atmospheric_tank_casing=Pressurized Atmospheric Tank Casing
+tile.contenttweaker.gas_intake_module=Gas Intake Module
 recipemap.blender.name=Blending
 tile.contenttweaker.blade_assembly.name=Blade Assembly Block
 item.contenttweaker.etched_phenolic_board.name=Etched Phenolic Board
