--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -2225,6 +2225,13 @@ tile.contenttweaker.core_processing_casing.name=Core Processing Casing
 tile.contenttweaker.pressurized_atmospheric_casing=Pressurized Atmospheric Casing
 tile.contenttweaker.pressurized_atmospheric_tank_casing=Pressurized Atmospheric Tank Casing
 tile.contenttweaker.gas_intake_module=Gas Intake Module
+tile.contenttweaker.plasma_containment_casing=Plasma Containment Casing
+tile.contenttweaker.magnetic_plasma_coil_casing=Magnetic Plasma Coil Casing
+tile.contenttweaker.magentic_plasma_intake_array=Magnetic Plasma Intake Array
+tile.contenttweaker.geothermal_core_casing=Geothermal Core Casing
+tile.contenttweaker.core_drill_assembly=Core Drill Assembly
+tile.contenttweaker.core_treatment_casing=Core Treatment Casing
+tile.contenttweaker.interstellar_core=Interstellar Core
 recipemap.blender.name=Blending
 tile.contenttweaker.blade_assembly.name=Blade Assembly Block
 item.contenttweaker.etched_phenolic_board.name=Etched Phenolic Board
