--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -2222,16 +2222,16 @@ item.contenttweaker.iron_concentrate.name=Iron Concentrate
 tile.contenttweaker.carved_pumpkin.name=Carved Pumpkin
 tile.contenttweaker.ore_factory_casing.name=Ore Factory Casing
 tile.contenttweaker.core_processing_casing.name=Core Processing Casing
-tile.contenttweaker.pressurized_atmospheric_casing=Pressurized Atmospheric Casing
-tile.contenttweaker.pressurized_atmospheric_tank_casing=Pressurized Atmospheric Tank Casing
-tile.contenttweaker.gas_intake_module=Gas Intake Module
-tile.contenttweaker.plasma_containment_casing=Plasma Containment Casing
-tile.contenttweaker.magnetic_plasma_coil_casing=Magnetic Plasma Coil Casing
-tile.contenttweaker.magentic_plasma_intake_array=Magnetic Plasma Intake Array
-tile.contenttweaker.geothermal_core_casing=Geothermal Core Casing
-tile.contenttweaker.core_drill_assembly=Core Drill Assembly
-tile.contenttweaker.core_treatment_casing=Core Treatment Casing
-tile.contenttweaker.interstellar_core=Interstellar Core
+tile.contenttweaker.pressurized_atmospheric_casing.name=Pressurized Atmospheric Casing
+tile.contenttweaker.pressurized_atmospheric_tank_casing.name=Pressurized Atmospheric Tank Casing
+tile.contenttweaker.gas_intake_module.name=Gas Intake Module
+tile.contenttweaker.plasma_containment_casing.name=Plasma Containment Casing
+tile.contenttweaker.magnetic_plasma_coil_casing.name=Magnetic Plasma Coil Casing
+tile.contenttweaker.magentic_plasma_intake_array.name=Magnetic Plasma Intake Array
+tile.contenttweaker.geothermal_core_casing.name=Geothermal Core Casing
+tile.contenttweaker.core_drill_assembly.name=Core Drill Assembly
+tile.contenttweaker.core_treatment_casing.name=Core Treatment Casing
+tile.contenttweaker.interstellar_core.name=Interstellar Core
 recipemap.blender.name=Blending
 tile.contenttweaker.blade_assembly.name=Blade Assembly Block
 item.contenttweaker.etched_phenolic_board.name=Etched Phenolic Board
@@ -2323,6 +2323,49 @@ recipemap.fluidizied_bed_reactor.name=Fluidized Bed Reaction
 recipemap.fluid_compressor.name=Fluid Compression
 tile.contenttweaker.ore_factory_casing.name=Ore Factory Casing
 tile.contenttweaker.core_processing_casing.name=Core Processing Casing
-tile.contenttweaker.pressurized_atmospheric_casing=Pressurized Atmospheric Casing
-tile.contenttweaker.pressurized_atmospheric_tank_casing=Pressurized Atmospheric Tank Casing
-tile.contenttweaker.gas_intake_module=Gas Intake Module
+tile.contenttweaker.pressurized_atmospheric_casing.name=Pressurized Atmospheric Casing
+tile.contenttweaker.pressurized_atmospheric_tank_casing.name=Pressurized Atmospheric Tank Casing
+tile.contenttweaker.gas_intake_module.name=Gas Intake Module
+item.contenttweaker.graphene_electrode_substrate.name=Graphene Electrode Substrate
+item.contenttweaker.dielectric_electrode_substrate.name=Dielectric Electrode Substrate
+item.contenttweaker.top_electrode_deposited_substrate.name=Top Electrode Deposited Substrate
+item.contenttweaker.etched_exposed_substrate.name=Etched Exposed Substrate
+item.contenttweaker.atomic_layered_substrate.name=Atomic Layered Substrate
+item.contenttweaker.quantum_smd_capacitor_chips.name=Quantum SMD Capacitor Chips
+item.contenttweaker.exposed_substrate.name=Exposed Substrate
+item.contenttweaker.deionized_substrate.name=Deionized Substrate
+item.contenttweaker.spincoated_substrate.name=Spincoated Substrate
+item.contenttweaker.cleaned_doped_ga_as_wafer.name=Cleaned Doped GaAs Wafer
+item.contenttweaker.spincoated_resistivated_ga_as_wafer.name=Spincoated Resistivated GaAs Wafer
+item.contenttweaker.resistor_lithography_mask.name=Resitor Lithography Mask
+item.contenttweaker.resistivated_ga_as_wafer.name=Resistivated GaAs Wafer
+item.contenttweaker.engraved_spincoated_ga_as_wafer.name=Engraved Spincoated GaAs Wafer
+item.contenttweaker.developed_ga_as_wafer.name=Developed GaAs Wafer
+item.contenttweaker.annealed_ga_as_wafer.name=Annealed GaAs Wafer
+item.contenttweaker.atomic_layered_ga_as_wafer.name=Atomic Layered GaAs Wafer
+item.contenttweaker.quantum_smd_resistor_chips.name=Quantum SMD Resistor Chips
+fluid.pmma=Poly(methyl methacrylate)
+fluid.mibk=Methyl Isobutyl Ketone
+fluid.deionized_water=Deionized Water 
+fluid.diluted_hydrofluoric_acid=Diluted Hydrofluoric Acid
+fluid.naquadah_concentrate_slurry=Naquadah Concentrate Slurry
+fluid.naquadah_oxide_solution=Naquadah Oxide Solution
+fluid.acidic_naquadah_concentrate=Acidic Nauqadah Concentrate
+fluid.naquadah_extraction_mixture=Naquadah Extraction Mixture
+fluid.naquadah_extract=Naquadah Extract
+fluid.naquadah_mother_liqour=Naquadah Mother Liqour
+fluid.arsenic_solution=Arsenic Solution
+fluid.wet_pmma_emulsion=Wet PMMA Emulsion
+fluid.dried_pmma_emulsion=Dried PMMA Emulsion
+fluid.acetone_cyanohydrin=Acetone Cyanohydrin
+fluid.methacrylamide_sulfate=Methacrylamide Sulfate
+fluid.methyl_methacrylate=Methyl Methacrylate
+fluid.methyl_methacrylate_emulsion=Methyl Methacrylate Emulsion
+fluid.potassium_amyl_xanthate=Potassium Amyl Xanthate
+multiblocktweaker.machine.atomic_layer_deposition_system.name=Atomic Layer Deposition System (ALD)
+recipemap.atomic_layer_deposition_system.name=Atomic Layer Deposition
+fluid.pentene=Pentene
+item.contenttweaker.floated_naquadah_concentrate.name=Floated Naquadah Concentrate
+item.contenttweaker.sfited_naquadah_concentrate.name=Sifted Naquadah Concentrate
+multiblocktweaker.machine.fractional_distillation_unit.name=Fractional Distillation Unit
+recipemap.fractional_distillation_unit.name=Fractional Distillation
