--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -2370,32 +2370,115 @@ item.contenttweaker.sfited_naquadah_concentrate.name=Sifted Naquadah Concentrate
 multiblocktweaker.machine.fractional_distillation_unit.name=Fractional Distillation Unit
 recipemap.fractional_distillation_unit.name=Fractional Distillation
 item.contenttweaker.sifted_naquadah_concentrate.name=Sifted Naquadah Concentrate
-metaitem.regolith_lunar=Lunar Regolith Dust
-metaitem.impure_he3=Impure Helium-3 Dust
-metaitem.dense_perovskite_clusters=Dense Perovskite Cluster Dust
-metaitem.regolith_martian=Martian Regolith Dust
-metaitem.sulfuric_mineral=Venus Sulfuric Mineral Dust
-metaitem.catherdral_pyrite=Extreme Catherdral Pyrite Dust
-metaitem.amorphous_ice_powder=Amorphous Ice Powder
-metaitem.saturn_ring_fragment=Saturn Ring Fragment Powder
-metaitem.carbon_rich_clay_powder=Carbon Rich Clay Dust
-metaitem.raw_buckfullerene_dust=Raw Impure Buckminsterfullerene Dust
-metaitem.amorphous_graphite=Amorphous Graphite Dust
-metaitem.uranus_nitriles=Uranian Nitriles Dust
-metaitem.uranus_hydrocarbon_dust=Uranian Hydrocarbon Dust
-metaitem.superionic_ice_crystal=Superionic Ice Crystal Powder
-metaitem.sasteroid_enstatite_diamond_dust=S-type Asteroids Enstatite Diamond Dust
-metaitem.pluto_tholin_dust=Plutonian Tholin Dust
-metaitem.cryotholin_crystal_dust_pluto=Plutonian Cryo-tholin Crystal Dust
-metaitem.impure_subsurface_clathrate=Impure Subsurface Clathrate Dust
-metaitem.tholin_ice_eris=Erisian Tholin Ice Powder
-metaitem.deep_carbon_silicate=Erisian Deep Carbon Silicate Powder
-metaitem.haumean_quartz_ice=Haumean Quartz Ice Dust
-metaitem.haumean_silicate_icecrystal_dust=Haumean Ice Silicate Crystal Powder
-metaitem.hydrocarbon_complex_mm=Makemakean Cryogenic Hydrocarbon Complex Dust
-metaitem.volatile_ice_crystal_dust=Volatile Ice Crystal Powder
-metaitem.scattered_kbo_dust=Scattered Kuiper Belt Objects Dust
-metaitem.ptn_dust=Primordial Trans-Neptunian Ore Dust
-metaitem.ceresian_subsurface_ammonia_dust=Ceresian Subsurface Ammonia Dust
-metaitem.ancient_interstellar_core_dust=Ancient Interstellar Core Dust
-metaitem.sulfide_nodes_oc=Oort Cloud Sulfide Nodes
+metaitem.regolith_lunar.name=Lunar Regolith Dust
+metaitem.impure_he3.name=Impure Helium-3 Dust
+metaitem.dense_perovskite_clusters.name=Dense Perovskite Cluster Dust
+metaitem.regolith_martian.name=Martian Regolith Dust
+metaitem.sulfuric_mineral.name=Venus Sulfuric Mineral Dust
+metaitem.catherdral_pyrite.name=Extreme Catherdral Pyrite Dust
+metaitem.amorphous_ice_powder.name=Amorphous Ice Powder
+metaitem.saturn_ring_fragment.name=Saturn Ring Fragment Powder
+metaitem.carbon_rich_clay_powder.name=Carbon Rich Clay Dust
+metaitem.raw_buckfullerene_dust.name=Raw Impure Buckminsterfullerene Dust
+metaitem.amorphous_graphite.name=Amorphous Graphite Dust
+metaitem.uranus_nitriles.name=Uranian Nitriles Dust
+metaitem.uranus_hydrocarbon_dust.name=Uranian Hydrocarbon Dust
+metaitem.superionic_ice_crystal.name=Superionic Ice Crystal Powder
+metaitem.sasteroid_enstatite_diamond_dust.name=S-type Asteroids Enstatite Diamond Dust
+metaitem.pluto_tholin_dust.name=Plutonian Tholin Dust
+metaitem.cryotholin_crystal_dust_pluto.name=Plutonian Cryo-tholin Crystal Dust
+metaitem.impure_subsurface_clathrate.name=Impure Subsurface Clathrate Dust
+metaitem.tholin_ice_eris.name=Erisian Tholin Ice Powder
+metaitem.deep_carbon_silicate.name=Erisian Deep Carbon Silicate Powder
+metaitem.haumean_quartz_ice.name=Haumean Quartz Ice Dust
+metaitem.haumean_silicate_icecrystal_dust.name=Haumean Ice Silicate Crystal Powder
+metaitem.hydrocarbon_complex_mm.name=Makemakean Cryogenic Hydrocarbon Complex Dust
+metaitem.volatile_ice_crystal_dust.name=Volatile Ice Crystal Powder
+metaitem.scattered_kbo_dust.name=Scattered Kuiper Belt Objects Dust
+metaitem.ptn_dust.name=Primordial Trans-Neptunian Ore Dust
+metaitem.ceresian_subsurface_ammonia_dust.name=Ceresian Subsurface Ammonia Dust
+metaitem.ancient_interstellar_core_dust.name=Ancient Interstellar Core Dust
+metaitem.sulfide_nodes_oc.name=Oort Cloud Sulfide Nodes
+item.contenttweaker.josephson_junction_extreme_board.name=Josephson Junction Extreme Board
+item.contenttweaker.patterned_extreme_reinforced_board.name=Patterned Extreme Reinforced Board
+item.contenttweaker.insulated_extreme_board.name=Insulated Extreme Board
+item.contenttweaker.etched_extreme_board.name=Etched Extreme Board
+item.contenttweaker.electroplated_extreme_board.name=Electroplated Extreme Board
+item.contenttweaker.patterned_extreme_board.name=Patterned Extreme Board
+item.contenttweaker.etched_phenolic_board.name=Etched Phenolic Board
+item.contenttweaker.rayon_plate.name=Rayon Plate
+item.contenttweaker.wet_rayon_spinneret.name=Wet Rayon Spinneret
+item.contenttweaker.rayon_spinneret.name=Rayon Spinneret
+item.contenttweaker.electron_source_100kv.name=Electron Source 100Kv
+fluid.carbon_disulfide_solution=Carbon Disulfide Solution
+fluid.demineralized_water=Demineralized Water 
+fluid.manganese_sulfate_solution=Manganese Sulfate Solution 
+fluid.light_water=Light Water 
+fluid.tritiated_water=Tritiated Water 
+fluid.supercritical_ultrapure_water_grade_1=Supercritical Ultrapure Water Grade-1
+fluid.high_pressure_ultrapure_water_grade_1=High Pressure Ultrapure Water Grade-1
+fluid.ultrapure_water_grade_8=Ultrapure Water Grade 8
+fluid.ultrapure_water_grade_7=Ultrapure Water Grade 7
+fluid.ultrapure_water_grade_6=Ultrapure Water Grade 6
+fluid.ultrapure_water_grade_5=Ultrapure Water Grade 5
+fluid.ultrapure_water_grade_4=Ultrapure Water Grade 4
+fluid.ultrapure_water_grade_3=Ultrapure Water Grade 3
+fluid.ultrapure_water_grade_2=Ultrapure Water Grade 2
+fluid.ultrapure_water_grade_1=Ultrapure Water Grade 1
+fluid.deaerated_water=Deaerated Water
+fluid.sterilized_water=Sterilized Water
+fluid.ultrapure_water=Ultrapure Water
+fluid.manganese_sulfate_solution=Manganese Sulfate Solution
+fluid.sodium_cellulose_xanthate_solution=Sodium Cellulose Xanthate Solution
+fluid.carbon_disulfide_solution=Carbon Disulfide Solution
+fluid.rayon=Rayon
+recipemap.plasma_etcher.name=Plasma Etching
+item.contenttweaker.steel_source_casing.name=Steel Source Casing
+item.contenttweaker.dowex_50_exchange_beads.name=Dowex 50 Exchange Beads
+item.contenttweaker.zircon_concentrate.name=Zircon Concentrate
+item.contenttweaker.floated_zircon.name=Floated Zircon
+item.contenttweaker.sifted_zircon.name=Sifted Zircon
+item.contenttweaker.floated_zirkelite.name=Floated Zirkelite
+item.contenttweaker.sifted_zirkelite.name=Sifted Zirkelite
+item.contenttweaker.condensated_dowex_50.name=Condensated Dowex 50
+metaitem.alkali_cellulose.name=Alkali Cellulose Dust
+metaitem.sodium_cellulose_xanthate.name=Sodium Cellulose Xanthate Dust
+metaitem.molecular_sieve.name=Molecular Sieve
+metaitem.oleic_acid.name=Oleic Acid Dust
+metaitem.calcinated_zircon.name=Calcinated Zircon Dust
+metaitem.zirconium_sulfate.name=Zirconium Sulfate
+fluid.tridecane=Tridecane
+fluid.tridecanoic_acid=Tridecanoic Acid
+fluid.tridecanol=Tridecanol
+fluid.bromotridecane=Bromotridecane
+fluid.tridecylphosphine=Tridecylphosphine
+fluid.tridecylphosphine_oxide=Tridecylphosphine Oxide
+fluid.tridecylphosphine_solution=Tridecylphosphine Solution
+fluid.trioctylphosphine=Trioctylphosphine
+fluid.trioctylphosphine_oxide=Trioctylphosphine Oxide
+fluid.trioctylphosphine_solution=Trioctylphosphine Solution
+fluid.bromooctane=Bromooctane
+fluid.zirkelite_slurry=Zirkelite Slurry
+fluid.zirconium_hafnium_fluoride_solution=Zirconium Hafnium Fluroide Solution
+fluid.oleum=Oleum
+fluid.dried_dowex_50_suspension=Dried Dowex 50 Suspension
+fluid.zirconium_hafnium_fluoride_extract=Zirconium Hafnium Fluoride Extract
+fluid.hafnium_fluoride_solution=Hafnium Fluoride Solution
+fluid.zirconium_fluoride_solution=Zirconium Fluoride Solution
+fluid.zirconium_fluoride_extract=Zirconium Fluoride Extract
+fluid.hafnium_fluoride_extract=Hafnium Fluoride Extract
+fluid.dowex_50_suspension=Dowex 50 Suspension
+fluid.dowex_50_solution=Dowex 50 Solution
+fluid.dowex_50=Dowex 50
+fluid.hafnium_fluoride=Hafnium Fluoride
+fluid.zirconium_fluoride=Zirconium Fluoride
+fluid.zirconium_hafnium_extraction_mixture=Zirconium Hafnium Extraction Mixture
+fluid.alamine_336=Alamine 336
+fluid.cyanex_923=Cyanex 923
+fluid.purified_zircon_slurry=Purified Zircon Slurry
+fluid.purified_zr_chloride=Purified Zirconium Chloride
+fluid.zircon_slurry=Zircon Slurry
+fluid.soda_ash_solution=Soda Ash Solution
+fluid.aklaline_sodium_oleate_solution=Alkaline Sodium Oleate Solution
+fluid.hafnium_sulfate_solution=Hafnium Sulfate Solution
+fluid.hafnium_extract=Hafnium Extract
